# advent2023

./: .gitignore  Makefile
advent2015/: pyproject.toml
advent2015/advent2015/: 1.py  2.py  3.py
advent2023/: pyproject.toml
advent2023/advent2023/: a.py  eight.py  eleventh.py  fifteen.py  fifth.py  first.py  fourteen.py  fourth.py  ninth.py  read.py  second.py  seventh.py  sixteen.py  sixth.py  tenth.py  third.py  thirteen.py  twelve.py
advent2023/files/: 13_t_2
advent2023/tests/: test_1.py  test_12.py  test_5.py  test_7.py  test_read.py
adventrust/: Cargo.toml  input.txt
adventrust/src/: main.rs
