[tool.poetry]
name = "advent2015"
version = "0.1.0"
description = ""
authors = ["Szczerbatybober <Szczerbatybober@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
